Changed the hamburger color, adjusted videos, dark

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -36,8 +39,11 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    <script src="https://kit.fontawesome.com/99f808d807.js" crossorigin="anonymous"></script>
-    <!-- <title>PROJECT NAME GOES HERE</title> -->
+    <script
+      src="https://kit.fontawesome.com/99f808d807.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Bark Buddy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
